2020-01-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Lock the mailbox in idle callbacks

	* libbalsa/mailbox.c (lbm_msgno_filt_check_idle_cb),
	(lbm_set_threading_idle_cb):

2020-01-26  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Always use the idle callback to sort after changing the
	threading; save the handler id, to remove the source at finalize
	time instead of taking a ref on the mailbox.

	* libbalsa/mailbox.c (libbalsa_mailbox_finalize): remove the
	source, if the handler id has been stored and not cleared;
	(lbm_set_threading_idle_cb), (lbm_set_threading): clear and
	store, respectively, the handler id.

2020-01-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Header eye candy

	Albrecht's suggestion!

	* src/balsa-mime-widget-message.c (add_header_gchar): improve
	xalign property of header value labels.

2020-01-23  Albrecht Dreß  <albrecht.dress@arcor.de>

	Crypto eye candies

	* libbalsa/libbalsa-gpgme-widgets.c: improve xalign and yalign properties
	  of labels in signature and key details widgets
	* src/balsa-mime-widget-crypto.c: balsa_mime_widget_signature_widget:
	  wrap/align signature status in expander label;
	  balsa_mime_widget_crypto_frame: add tooltips to padlock icons
	* src/balsa-mime-widget-message.c: add_header_sigstate:
	  wrap/align signature status in headers box

2020-01-23  Albrecht Dreß  <albrecht.dress@arcor.de>

	Bug fix: S/MIME cert chain broken in identity key selection

	* libbalsa/libbalsa-gpgme-widgets.c: libbalsa_gpgme_key(): fall back
	  to the cert fingerprint for cb smime_show_chain() if the passed one is NULL
	* libbalsa/x509-cert-widget.c: x509_cert_chain_smime(): display message
	  if the cert fingerprint is NULL, requires a litte refactoring

2020-01-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: improve ensure-visible

	* src/balsa-index.c (balsa_index_ensure_visible): if either a
	message is selected or has the focus, scroll to it.
